--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li><a href="/"> 首 页 </a></li>
         <li><a href="/trolley"> 购 物 车 </a></li>
-        <li><a href="/"> 个 人 信 息 </a></li>
+        <li><a href="/order"> 查 看 订 单 </a></li>
         <li><a href="/login"> 登 录 </a></li>
         <li><a href="/register"> 注 册 </a></li>
     </ul>
