--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -133,7 +133,7 @@ body{
 .content .img_content .info p{
     line-height: 25px;
     /*加一个下边距和价格隔开*/
-    margin-bottom: 15px;
+    margin-bottom: 18px;
 }
 .content .img_content .info{
     margin-left: 25px;
@@ -141,6 +141,7 @@ body{
 }
 /*价格样式*/
 .content .img_content .info .img_btn .price{
+    margin-top: 12px;
     color: red;
     font-size: 20px;
 }
@@ -150,17 +151,17 @@ body{
     width: 210px;
 }
 .content .img_content .info .img_btn .btn{
-    width: 60px;
-    height: 30px;
-    background-color: red;
+    width: 55px;
+    height: 45px;
+    /*background-color: red;*/
     text-align: center;
     border-radius: 5px; /*圆角矩形*/
     float: right;
 }
 .content .img_content .info .img_btn .btn .cart img{
-    width: 60px;
-    height: 20px;
-    margin-top: 5px;
+    width: 55px;
+    height: 45px;
+    margin-bottom: 10px;
 
 }
 .content .img_content .info .img_btn .price{
