--- a/src/main/resources/static/css/trolley.css
+++ b/src/main/resources/static/css/trolley.css
@@ -1,165 +1,61 @@
-body,div,h1,h2,h3,h4,h5,h6,li,ol,ul{margin: 0px; padding: 0px;}
-body{text-align: center;font-size:14px;}
-a{text-decoration: none;}
-li{list-style: none;}
-
-.nav{
-
-    height: 30px;
-
-    background-color: #f1f1f1;
-
+body, div, h1, h2, h3, h4, h5, h6, li, ol, ul {
+    margin: 0px;
+    padding: 0px;
 }
 
+body {
+    /*text-align: center;*/
+    font-size: 14px;
+}
 
-.warp{
+.info a {
+    text-decoration: none;
+    padding-left: 80px;
+    width: 120px;
+}
 
-    width: 1000px;
+li {
+    list-style: none;
+}
 
+.warp {
+    width: 1200px;
     margin: 0px auto;
-
 }
-
-.nav_ul1,.nav_ul2 li{
-
-    float: left;
-
-}
-
-.nav_ul1 li{
-
-    float: left;
-
-    line-height: 30px;
-
-    margin-right: 20px;
-}
-
-.nav_ul1 a,.nav_ul2 a,.nav_ul2 span{
-
-    font-size: 12px;
-
-    color: gray;
-
-}
-
-.nav_ul2{
-
-    float: right;
-
-}
-.nav_ul2 li,.nav_ul2 span{
-
-    line-height: 30px;
-
-    margin-left: 15px;
-
-}
-.nav a:hover{
-
-    color: red;
-
-}
-
-/*搜索框开始*/
-
-.search{
-
-    margin-top: 20px;
-
-}
-
-.search img{
-    /*清除之前的样式*/
-    clear: both;
-
-    float: left;
-
-}
-
-.search_div{
-
-    float: right;
-
-    margin-top: 25px;
-
-}
-.search_text{
-
-    width: 265px;
-
-    height: 21px;
-
-
-    border: 3px solid #c91623;
-
-    position: relative;
-
-    left: 4px;
-
-    top: -1px;
-}
-
-.search_but{
-
-    width: 51px;
-
-    height: 29px;
-
-    background-color: #c91623;
-
-    border: 0px;
-
-    color: #FFFFFF;
-
-}
-
-/*搜索框结束*/
 
 /*标题开始*/
-.title{
-
-    margin-top: 130px;
-
+.title {
+    margin-top: 75px;
+    margin-bottom: 15px;
 }
 
-.title h3{
+.title h3 {
 
     float: left;
-
     font-size: 23px;
-
-    color:#c91623 ;
+    color: #c91623;
+    padding-bottom: 15px;
 }
 
 
-.title div{
-
-
-    float: right;
-
-    font-size: 14px;
-
-    color:gray ;
-}
 /*标题结束*/
 
 /*显示菜单的开始*/
-.tips{
+.tips {
 
-    width: 1000px;
+    width: 1200px;
 
     height: 50px;
 
     background-color: #f1f1f1;
 
-    margin-top: 165px;
+    margin-top: 100px;
 
-    border: 1px  solid  #e9e9e9;
+    border: 1px solid #e9e9e9;
 
 }
 
-.tips li{
+.tips li {
 
     float: left;
 
@@ -170,118 +66,104 @@ li{list-style: none;}
     color: gray;
 
 
-
 }
 
-.tips li:nth-child(1){width: 90px; border-top: 3px solid #c91623 ;}
+.tips li:nth-child(1) {
+    width: 40px;
+}
 
-.tips li:nth-child(2){margin-left: 80px;}
+.tips li:nth-child(2) {
+    margin-left: 480px;
+}
 
-.tips li:nth-child(3){margin-left: 430px;}
+.tips li:nth-child(3) {
+    margin-left: 120px;
+}
 
-.tips li:nth-child(4){margin-left: 70px;}
+.tips li:nth-child(4) {
+    margin-left: 120px;
+}
 
-.tips li:nth-child(5){margin-left: 110px;}
+.tips li:nth-child(5) {
+    margin-left: 120px;
+}
 
-.tips li:nth-child(6){margin-left: 50px;}
 
 /*显示菜单的结束*/
 
 
 /*商品详情展示开始*/
-.info{
-    width: 1000px;
-
+.info {
+    width: 1200px;
     height: 125px;
-
-
-    background-color: #fff4e8;
-
-    border: 1px  solid gray;
-
+    background-color:#d4e3e5;
+    border: 1px solid gray;
     margin-top: 30px;
-
-
-    border-top: 3px solid  gray;
+    border-top: 3px solid gray;
 }
 
-.info li{
-    float:  left;
-
+.info li {
+    float: left;
     margin-top: 20px;
+    margin-left: 30px;
 }
-.info a{
 
-    font-size: 12px;
+.info a {
+
+    font-size: 15px;
 
     color: #333333;
 
 }
-.info_1{
 
-    margin-left: 23px;
+.info_2 {
 
-}
-.info_2{
-
-    margin-left: 15px;
-
-    border: 1px  solid gray;
+    margin-left: 80px;
+    margin-top: 30px;
+    border: 1px solid gray;
 
 }
-.info_3{
 
-    width: 270px;
+.info_3 {
 
+    width: 400px;
     height: 20px;
 
 }
 
-.info_4{
-
-    margin-left: 45px;
-
-}
-.info_5{
-
-    margin-left: 70px;
+.info_5 {
+    margin-top: 30px;
+    margin-left: 150px;
 
 }
-.info_6{
 
-    margin-left: 40px;
+.info_6 {
+    width: 150px;
+    padding-left: 35px;
+    margin-top:50px;
 }
-.info_6 input{
 
+.info_6 span {
+    float: left;
     width: 30px;
-
-    height: 12px;
-
+    height: 16px;
     text-align: center;
-
-    position: relative;
-
-    top: -2px;
-
-    left: -5px;
-
+    background-color: white;
+    border: 1px solid gray;
+    border-left: hidden;
+    border-right: hidden;
 }
 
-.info_6 button{
-
+.info_6 button {
+    float: left;
     width: 30px;
-
     height: 18px;
 }
-.bot{
 
-    position: relative;
 
-    left: -10px;
-}
-.info_7{
-
-    margin-left: 40px;
+.info_7 {
+    margin-top: 30px;
+    margin-left: 80px;
 }
 
 /*商品详情展示结束*/
@@ -289,20 +171,15 @@ li{list-style: none;}
 
 /*结算模块开始*/
 
-.balance{
+.balance {
 
-    width: 1000px;
-
+    width: 1200px;
     height: 50px;
-
-    border: 1px  solid  gray;
-
-
+    border: 1px solid gray;
     margin-top: 30px;
-
 }
 
-.balance_ul1,.balance_ul1>li,.balance_ul2>li{
+.balance_ul1, .balance_ul1 > li, .balance_ul2 > li {
 
     float: left;
 
@@ -312,12 +189,13 @@ li{list-style: none;}
 
 
 }
-.balance_ul2{
+
+.balance_ul2 {
 
     float: right;
 }
 
-.butt{
+.butt {
 
     width: 100px;
 
@@ -335,12 +213,12 @@ li{list-style: none;}
 
 }
 
-.balance span{
+.balance span {
 
 
     font-size: 25px;
 
-    color: #C91623 ;
+    color: #C91623;
 
     font-weight: bold;
 }
