--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 <body>
 <!-- --------------------页眉板块-------------------- -->
 <div class="header">
+    <img src="img/logo.png" style="width: 400px;height: 90px;float: left;padding-top: 25px">
     <ul>
         <li><a href="/"> 首 页 </a></li>
         <li><a href="/trolley"> 购 物 车 </a></li>
@@ -20,7 +21,6 @@
 
 <!-- --------------------正文板块-------------------- -->
 <div class="content">
-    <!-- 设置广告栏 -->
     <div class="banner">
         <img src="img/home.jpg" class="banner_img">
     </div>
