--- a/src/main/resources/templates/trolley.html
+++ b/src/main/resources/templates/trolley.html
@@ -9,6 +9,7 @@
 <body>
 
 <div class="header">
+    <img src="img/logo.png" style="width: 400px;height: 90px;float: left;padding-top: 25px">
     <ul>
         <li><a href="/"> 首 页 </a></li>
         <li><a href="/trolley"> 购 物 车 </a></li>
@@ -22,15 +23,12 @@
 <!--标题开始-->
 <div class="title warp">
 
-    <h3>购物车</h3>
-
 </div>
 
 <!--标题结束-->
 
 <!--显示菜单的开始-->
 <div class="tips warp">
-
     <ul>
         <li>商品</li>
         <li>单价</li>
