--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -9,6 +9,7 @@ body{
 .header{
     width: 1200px;
     height: 75px;
+    margin: 0px auto;
 }
 
 .header ul
@@ -86,7 +87,7 @@ body{
 .content{
     /*响应式布局始终居中*/
     width: 1280px;
-    margin: 25px auto;
+    margin: 15px auto;
 }
 .content .banner
 {
@@ -94,7 +95,7 @@ body{
 }
 /*图片距离*/
 .content .banner .banner_img{
-    padding:40px;
+    padding:25px;
     width: 100%;
     height: 100%;
 }
@@ -173,7 +174,6 @@ body{
     height: 60px;
     line-height: 60px;
     /*border: 1px solid black;*/
-    /*溢出处理*/
     overflow:hidden;
 }
 .content .page_nav ul li{
@@ -181,12 +181,14 @@ body{
     margin-right: 20px;
     list-style: none;
 }
+.content .page_nav ul li a {
+    color: #262626;
+}
 .content .page_nav ul{
     width: 500px;
     margin: auto;
     overflow:hidden;
 }
-/*第一页设置背景圆*/
 .content .page_nav .first_page{
     border-radius: 50%;
     background-color: #c5c5c5;
