--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="/css/order.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css"
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 
 <div class="header">
+    <img src="img/logo.png" style="width: 400px;height: 90px;float: left;padding-top: 25px">
     <ul>
         <li><a href="/"> 首 页 </a></li>
         <li><a href="/trolley"> 购 物 车 </a></li>
