--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -105,7 +105,7 @@ body{
     width: 1280px;
 }
 .content .img_content ul li{
-    width: 270px;  /*360*3+120*/
+    width: 270px;
     float: left;
     margin: 0 40px 40px 0;
     list-style: none;
@@ -117,7 +117,6 @@ body{
     /*box-shadow: 0 0 5px 3px #ccc */
     /*浏览器兼容*/
     -webkit-box-shadow: 0 0 5px 3px #ccc; /*谷歌浏览器*/
-    -moz-box-shadow: 0 0 5px 3px #ccc; /*火狐浏览器*/
 }
 .content .img_content ul li img{
     max-width: 270px;
